[gd_scene load_steps=14 format=3 uid="uid://qg4i5222wwm7"]

[ext_resource type="Texture2D" uid="uid://b5ohohbptj2eg" path="res://Assets/Tiny Swords/Factions/Knights/Troops/Warrior/Warrior_Red.png" id="1_tk6it"]
[ext_resource type="Script" path="res://Scenes/player.gd" id="1_u577o"]
[ext_resource type="PackedScene" uid="uid://bu6eeloib62qc" path="res://Scenes/morteJogador.tscn" id="2_ecqsv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_csxlj"]
radius = 19.0
height = 58.0

[sub_resource type="Animation" id="Animation_ycnjb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_2cmbg"]
resource_name = "atacar"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20, 21, 22]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"ataquePadrao"
}]
}

[sub_resource type="Animation" id="Animation_d7cdo"]
resource_name = "correr"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="Animation" id="Animation_p2uiy"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bo6lo"]
_data = {
"RESET": SubResource("Animation_ycnjb"),
"atacar": SubResource("Animation_2cmbg"),
"correr": SubResource("Animation_d7cdo"),
"idle": SubResource("Animation_p2uiy")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_3lcmd"]
radius = 112.004

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4u5n7"]
radius = 28.0
height = 80.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d5wid"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x8t2y"]
bg_color = Color(0.772549, 0.027451, 0.105882, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_u577o")
danoEspada = 5
prefabMorte = ExtResource("2_ecqsv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -27)
texture = ExtResource("1_tk6it")
hframes = 6
vframes = 8
frame = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -25)
shape = SubResource("CapsuleShape2D_csxlj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bo6lo")
}
autoplay = "idle"

[node name="TimerAtaquePadrao" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AreaAtqBase" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAtqBase"]
position = Vector2(0, -27)
shape = SubResource("CircleShape2D_3lcmd")
debug_color = Color(0.917647, 0.258824, 0.333333, 0.419608)

[node name="AreaRecebimentoDano" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRecebimentoDano"]
position = Vector2(0, -24)
shape = SubResource("CapsuleShape2D_4u5n7")

[node name="BarraVida" type="ProgressBar" parent="."]
offset_left = -40.0
offset_top = 8.0
offset_right = 38.0
offset_bottom = 20.0
theme_override_styles/background = SubResource("StyleBoxFlat_d5wid")
theme_override_styles/fill = SubResource("StyleBoxFlat_x8t2y")
value = 100.0
show_percentage = false

[connection signal="timeout" from="TimerAtaquePadrao" to="." method="_on_timer_ataque_padrao_timeout"]
